--- a/css/header.css
+++ b/css/header.css
@@ -1,75 +1,45 @@
-@import 'https://fonts.googleapis.com/css?family=Roboto+Mono:100';
 .header {
+  display: flex;
+  flex-direction: row;
   width: 100%;
+  height: 300px;
+  background-image: url("../img/venus.jpeg");
 }
 
-.header-image {
-  background-image: url("../img/venus.png");
-  background-position: center center;
-  background-size: cover;
-  width: 100%;
-  position: relative;
-  height: 300px;
+.column {
+  width: 50%;
 }
 
 .logo {
-  position: absolute;
-  top: 40px;
-  left: 20px;
-  width: 20%;
+  margin-left: 20px;
+  width: 30%;
+  height: 50%;
   opacity: .8;
 }
 
-.title {
-  font-family: 'Roboto Mono', monospace;
-  float: left;
-  position: absolute;
-  width: 100%;
-  top: 20px;
-  left: 20px;
-  color: burlywood;
-  line-height: 20px;
-  font-size: 40px;
-}
-
 .nav {
-  float: right;
-  position: absolute;
-  margin: 10px;
-  top: 20px;
-  right: 20px;
-  line-height: 20px;
+  display: flex;
+  text-align: right;
+  flex-direction: column;
+  height: 50%;
+  justify-content: space-between;
 }
 
-.nav a {
+.link-style a {
+  padding: 5px;
+  font-size: 20px;
   text-decoration: none;
-  list-style-type: none;
   color: burlywood;
   border: 1px solid chocolate;
-  padding: 10px;
 }
 
 .nav a:hover {
-  color: sienna;
-}
-
-.nav ul li {
-  display: inline-block;
-  top: -10px;
-}
-
-/* cкрамбл эффект */
-.dud {
-  color: #757575;
+  color: white;
 }
 
 @media (max-width: 800px) {
-  .header-image {
-    background-image: url("../img/venus.png");
-    width: 100%;
-    height: auto;
-    display: flex;
-    align-content: center;
+  .header {
+    flex-direction: column;
   }
 
   .logo {
@@ -77,34 +47,18 @@
   }
 
   .title {
+    font-size: 30px;
     display: flex;
-    flex-flow: row;
+    text-align: center;
+  }
+
+  .link-style {
+    margin: 10px;
+  }
+
+  .column {
+    display: flex;
     justify-content: center;
     width: 100%;
-    left: 0;
-  }
-
-  .nav li {
-    display: flex;
-    float: right;
-    line-height: 200px;
-  }
-}
-
-@media (max-width: 400px) {
-  .nav {
-    margin-top: 80px;
-  }
-
-  .nav li {
-    line-height: 50px;
-    flex-flow: column;
-    width: 40%;
-  }
-}
-
-@media (max-width: 320px) {
-  .nav {
-    margin-top: 50px;
   }
 }
