--- a/css/sale.css
+++ b/css/sale.css
@@ -1,25 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100&display=swap');
-
-#sale {
-  width: 100%;
-  padding: 18px;
-  padding-top: 70px;
-  font:14px/1.3 'JetBrains Mono', monospace;
-
-}
-
-#note{
-  color: white;
-  font-size: 12px;
+.note{
   margin: 0 auto;
-  padding: 4px;
+  padding: 10px;
+  width: 32%;
+  font-size: 12px;
   text-align: center;
   text-shadow: 1px 1px 0 black;
-  width: 200px;
+  color: white;
 }
 
 @media (max-width: 500px) {
-  #sale {
+  #title-sale {
    display: none;
   }
 }
