--- a/css/main.css
+++ b/css/main.css
@@ -9,9 +9,8 @@ body {
   overflow-x: hidden;
 }
 
-.background {
-  background-color: black;
-  opacity: .8;
+.bg {
+  background: rgba(0, 0, 0, 0.8);
 }
 
 .text {
